--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": ["app/Helpers/clash-translate.php"]
     },
     "autoload-dev": {
         "psr-4": {
